# RustScan

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
RustFF/: .gitignore  Cargo.toml  README.md
RustFF/scripts/: analyze_model.py  export_onnx.py  procrustes.py  setup_spann3r.sh
RustFF/src/: lib.rs
RustFF/src/inference/: mod.rs  procrustes.rs  spann3r.rs
RustFF/src/models/: mod.rs
RustGS/: Cargo.toml  README.md
RustGS/docs/commands/: tum_freiburg1_xyz.md
RustGS/docs/plans/: 2026-03-22-metal-performance-roadmap.md  2026-03-22-metal-training-backend-design.md  2026-03-23-metal-backend-next-phase.md  2026-04-09-rustgs-soa-splat-architecture-proposal.md  2026-04-12-burn-wgpu-migration-plan.md  2026-04-27-3dgs-blur-improvement-methods.md  brush-architecture-rustgs-refactor.md
RustGS/docs/tasks/: phase1-scaffolding.md  phase2-gpu-primitives.md  phase3-forward-pipeline.md  phase4-backward-autodiff.md  phase5-training-pipeline.md  phase6-wire-and-cleanup.md  phase7-verification-summary.md  phase7-verification.md  phase8-code-review-fixes.md
RustGS/examples/: evaluate_psnr.rs  rustgs_eval_suite.rs  rustgs_residual_heatmap.rs  training_benchmark.rs
RustGS/experiments/: brush_vs_rustgs_tum_freiburg1_xyz.md  tum_freiburg1_xyz_psnr.md
RustGS/src/: lib.rs  sh.rs  tests.rs
RustGS/src/core/: camera.rs  gaussian.rs  mod.rs  splats.rs  splats_tests.rs
RustGS/src/core/camera/: tests.rs
RustGS/src/diff/: analytical_backward.rs  diff_renderer.rs  diff_splat.rs  mod.rs
RustGS/src/init/: initialization.rs  mod.rs
RustGS/src/io/: colmap_dataset.rs  dataset_loader.rs  mod.rs  nerfstudio_dataset.rs  scene_io.rs  tests.rs  training_checkpoint.rs  tum_dataset.rs
RustGS/src/legacy/: gaussian.rs  mod.rs
RustGS/src/render/: mod.rs  renderer.rs  tiled_renderer.rs
RustGS/src/sh/: tests.rs
RustGS/src/training/: autodiff.rs  autodiff_trainer.rs  benchmark.rs  chunk_planner.rs  chunk_training.rs  clustering.rs  complete_trainer.rs  config.rs  data_loading.rs  density_controller.rs  eval.rs  events.rs  execution_plan.rs  export.rs  frame_loader.rs  frame_targets.rs  gpu_trainer.rs  init_map.rs  metal_backward.rs  metal_dispatch.rs  metal_forward.rs  metal_kernels.rs  metal_loss.rs  metal_optimizer.rs  metal_pipelines.rs  metal_projection.rs  metal_raster.rs  metal_resources.rs  metal_runtime.rs  metal_trainer.rs  metrics.rs  mod.rs  morton.rs  optimizer_state.rs  orchestrator.rs  parity_harness.rs  pose_embedding.rs  pose_utils.rs  runtime_splats.rs  splat_interop.rs  (+7 more)
RustGS/tests/: integration_test.rs  tum_training.rs
RustMesh/: ATTRIB_SOA_KERNEL_DESIGN.md  Cargo.toml  P0_FIX_PLAN.md  README.md  Review.md
RustMesh/benches/: bench.rs  quadric_bench.rs
RustMesh/examples/: bench.rs  bench_cube.rs  bench_decimate.rs  bench_decimate2.rs  benchmark_large.rs  convert_obj_to_off.rs  debug_decimate.rs  debug_validate.rs  e2e_export.rs  full_benchmark.rs  openmesh_compare_benchmark.rs  openmesh_compare_decimation.rs  openmesh_compare_decimation_trace.rs  openmesh_compare_examples.rs  openmesh_compare_io.rs  openmesh_compare_large_decimation.rs  openmesh_compare_normals.rs  openmesh_compare_smoothing.rs  openmesh_compare_vector_benchmark.rs  quadric_mesh_test.rs  quadric_perf.rs  test_boundary.rs  test_circulator.rs  test_face_circulator.rs  test_operations.rs  test_operations2.rs  test_operations3.rs  test_operations4.rs  test_operations5.rs  test_simple.rs  test_smart.rs  test_smooth.rs  test_subdivision.rs  test_validate.rs  test_vv.rs
RustMesh/examples/openmesh_compare_common/: mod.rs
RustMesh/src/: lib.rs
RustMesh/src/Core/: attrib_soa_kernel.rs  connectivity.rs  geometry.rs  handles.rs  io.rs  items.rs  soa_kernel.rs
RustMesh/src/Tools/: analysis.rs  decimation.rs  decimation_modules.rs  dualizer.rs  hole_filling.rs  mesh_repair.rs  remeshing.rs  smoother.rs  subdivision.rs  vdpm.rs
RustMesh/src/Utils/: circulators.rs  performance.rs  quadric.rs  smart_ranges.rs  status.rs  test_data.rs
RustSLAM/: Cargo.toml  DESIGN.md  README.md  Review.md
RustSLAM/examples/: e2e_slam_to_mesh.rs  load_tum_dataset.rs  test_marching_cubes.rs  test_optimization_thread.rs  test_video_loader.rs
RustSLAM/src/: lib.rs  main.rs  test_utils.rs
RustSLAM/src/cli/: integration_tests.rs  mod.rs  pipeline_checkpoint.rs  slam_pipeline.rs
RustSLAM/src/config/: config.rs  mod.rs  params.rs
RustSLAM/src/core/: camera.rs  frame.rs  keyframe.rs  keyframe_selector.rs  map.rs  map_point.rs  mod.rs  pose.rs
RustSLAM/src/depth/: additional_tests.rs  fusion.rs  mod.rs  stereo.rs
RustSLAM/src/examples/: run_vo.rs
RustSLAM/src/features/: base.rs  hamming_matcher.rs  knn_matcher.rs  mod.rs  orb.rs  pure_rust.rs  utils.rs
RustSLAM/src/fusion/: autodiff.rs  autodiff_trainer.rs  complete_trainer.rs  diff_renderer.rs  diff_splat.rs  gaussian.rs  gpu_trainer.rs  mapper.rs  marching_cubes.rs  mesh_extractor.rs  mesh_io.rs  mesh_metadata.rs  mod.rs  renderer.rs  scene_io.rs  slam_integrator.rs  tiled_renderer.rs  tracker.rs  trainer.rs  training_pipeline.rs  tsdf_volume.rs
RustSLAM/src/io/: dataset.rs  mod.rs  video_decoder.rs  video_loader.rs
RustSLAM/src/loop_closing/: closing.rs  database.rs  detector.rs  detector_test.rs  mod.rs  optimized_detector.rs  relocalization.rs  vocabulary.rs
RustSLAM/src/mapping/: local_mapping.rs  mod.rs  tests.rs
RustSLAM/src/optimizer/: ba.rs  mod.rs
RustSLAM/src/pipeline/: additional_tests.rs  checkpoint.rs  mod.rs  realtime.rs
RustSLAM/src/tracker/: mod.rs  solver.rs  solver_tests.rs  vo.rs
RustSLAM/src/viewer/: mod.rs
RustSLAM/tests/: video_loader_pipeline_tests.rs  video_loader_unit_tests.rs
RustViewer/: Cargo.toml  README.md  UI_IMPLEMENTATION_STATUS.md
RustViewer/src/: app.rs  lib.rs  main.rs
RustViewer/src/loader/: checkpoint.rs  colmap.rs  gaussian.rs  mesh.rs  mod.rs
RustViewer/src/renderer/: camera.rs  mod.rs  pipelines.rs  scene.rs
RustViewer/src/training/: mod.rs  preview.rs  session.rs
RustViewer/src/ui/: mod.rs  panel.rs  theme.rs  viewport.rs
RustViewer/tests/: loader_integration_test.rs
docs/: ARCHITECTURE.md  (+29 more)
(+326 files in other folders)
