[package]
name = "rustmesh"
version = "0.1.0"
edition = "2021"
description = "Rust port of OpenMesh - A versatile geometric data structure"
authors = ["RustMesh Developers"]

[dependencies]
# 几何库
glam = "0.25"
nalgebra = "0.33"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IO 工具
byteorder = "1"

# 迭代器工具
itertools = "0.13"

# 测试工具
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

# 发布配置 - 激进优化
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

# 开发配置 - 快速编译 + 调试支持
[profile.dev]
opt-level = 1
debug = "line-tables-only"

# 测试配置
[profile.test]
opt-level = 0

[[bench]]
name = "bench"
harness = false
path = "examples/bench.rs"

[[bench]]
name = "quadric_bench"
harness = false
