[package]
name = "rustscan"
version = "0.1.0"
edition = "2021"
description = "Workspace-level orchestration CLI for RustScan reconstruction workflows"
authors = ["RustScan Developers"]

[workspace]
members = ["rustscan-types", "RustMesh", "RustSLAM", "RustGS", "RustViewer", "RustFF"]
resolver = "2"

[workspace.dependencies]
glam = "0.25"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
glam = { workspace = true }
log = "0.4"
rustgs = { path = "RustGS" }
rustmesh = { path = "RustMesh" }
rustscan-types = { path = "rustscan-types" }
rustslam = { path = "RustSLAM", default-features = false }
