[package]
name = "rustff"
version = "0.1.0"
edition = "2021"
description = "FeedForward neural network inference for 3D reconstruction (pose + depth)"
authors = ["RustScan Team"]
license = "MIT"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
image = "0.25"
log = "0.4"
anyhow = "1"

# ONNX Runtime inference
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "copy-dylibs"], optional = true }

# Candle ONNX (alternative backend)
candle-core = { version = "0.9.2", optional = true }
candle-onnx = { version = "0.9.2", optional = true }

# CLI
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = []
onnx-ort = ["dep:ort"]
onnx-candle = ["dep:candle-core", "dep:candle-onnx"]
cli = ["dep:clap", "dep:env_logger"]

[dev-dependencies]
tempfile = "3"
