[package]
name = "rustgs"
version = "0.1.0"
edition = "2021"
description = "3D Gaussian Splatting training library"
authors = ["RustScan Developers"]

[lib]
name = "rustgs"
path = "src/lib.rs"

[[bin]]
name = "rustgs"
path = "src/bin/rustgs.rs"

[dependencies]
rustscan-types = { path = "../rustscan-types" }
glam = { workspace = true }
rayon = "1.8"
serde = { workspace = true }
thiserror = { workspace = true }
kiddo = "5.2.1"

# CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1", optional = true }
log = { version = "0.4", optional = true }

# GPU dependencies (optional)
candle-core = { version = "0.9.2", features = ["metal"], optional = true }
candle-metal = { version = "0.27.1", features = ["mps"], optional = true }

[features]
default = ["gpu", "cli"]
gpu = ["dep:candle-core", "dep:candle-metal"]
cli = ["dep:clap", "dep:env_logger", "dep:anyhow", "dep:log"]

[dev-dependencies]
tempfile = "3"