[package]
name = "rustgs"
version = "0.1.0"
edition = "2021"
description = "3D Gaussian Splatting training library"
authors = ["RustScan Developers"]

[lib]
name = "rustgs"
path = "src/lib.rs"

[[bin]]
name = "rustgs"
path = "src/bin/rustgs.rs"

[dependencies]
rustscan-types = { path = "../rustscan-types" }
glam = { workspace = true }
rayon = "1.8"
rand = "0.8"
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
kiddo = "5.2.1"
image = "0.25"
log = "0.4"
libc = "0.2"

# CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1", optional = true }

# GPU dependencies (optional)
candle-core = { version = "0.9.2", features = ["metal"], optional = true }
candle-metal = { version = "0.27.1", features = ["mps"], optional = true }
candle-metal-kernels = { version = "0.9.2", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }
objc2-metal = { version = "0.3.2", optional = true }

[features]
default = ["gpu", "cli"]
gpu = [
    "dep:candle-core",
    "dep:candle-metal",
    "dep:candle-metal-kernels",
    "dep:objc2-foundation",
    "dep:objc2-metal",
]
cli = ["dep:clap", "dep:env_logger", "dep:anyhow"]

[dev-dependencies]
tempfile = "3"
