[package]
name = "rustgs"
version = "0.1.0"
edition = "2021"
description = "3D Gaussian Splatting training library"
authors = ["RustScan Developers"]

[lib]
name = "rustgs"
path = "src/lib.rs"

[[bin]]
name = "rustgs"
path = "src/bin/rustgs.rs"

[dependencies]
rustscan-types = { path = "../rustscan-types" }
glam = { workspace = true }
rayon = "1.8"
rand = "0.8"
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
kiddo = "5.2.1"
image = "0.25"
log = "0.4"
libc = "0.2"

# CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1", optional = true }

# GPU dependencies
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["autodiff", "wgpu"], optional = true }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["exclusive-memory-only", "template", "cubecl-wgsl"], optional = true }
burn-cubecl = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["template"], optional = true }
burn-fusion = { git = "https://github.com/tracel-ai/burn", default-features = false, optional = true }
burn-ir = { git = "https://github.com/tracel-ai/burn", default-features = false, optional = true }
wgpu = { version = "29", default-features = false, features = ["naga-ir"], optional = true }
naga_oil = { version = "0.22", optional = true }
bytemuck = { version = "1.20", features = ["derive"], optional = true }
tokio = { version = "1", features = ["macros", "rt"], optional = true }

[features]
default = ["gpu", "cli"]
gpu = [
    "dep:burn",
    "dep:burn-wgpu",
    "dep:burn-cubecl",
    "dep:burn-fusion",
    "dep:burn-ir",
    "dep:wgpu",
    "dep:naga_oil",
    "dep:bytemuck",
    "dep:tokio",
]
gpu-wgpu = ["gpu"]
cli = ["dep:clap", "dep:env_logger", "dep:anyhow"]

[dev-dependencies]
tempfile = "3"
