[package]
name = "rustslam"
version = "0.1.0"
edition = "2021"
description = "A pure Rust Visual SLAM library"
authors = ["RustScan Team"]
license = "MIT"

[dependencies]
# 图像处理 (可选)
opencv = { version = "0.98", optional = true }

# Bundle Adjustment (apex-solver)
apex-solver = "1.0"

# 深度学习 (可选，用于 SuperPoint)
tch = { version = "0.5", optional = true }

# 数学库 (SIMD 加速)
glam = "0.25"

# 并发
rayon = "1.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
thiserror = "1.0"

# 图像处理
image = { version = "0.25", optional = true }

# KD-Tree for KNN matching
kiddo = "5.2.1"

[features]
default = []
opencv = ["dep:opencv"]
deep-learning = ["dep:tch"]
image = ["dep:image"]

[build-dependencies]
bindgen = "0.69"
