[package]
name = "rust-viewer"
version = "0.1.0"
edition = "2021"
description = "Interactive 3D viewer for RustScan SLAM results"

[[bin]]
name = "rust-viewer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["wgpu", "default_fonts", "accesskit"] }
egui = "0.31"
glam = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
rfd = "0.14"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
rustslam = { path = "../RustSLAM", default-features = false, features = ["viewer-types"] }
rustgs = { path = "../RustGS", default-features = false, features = ["gpu"] }

[dev-dependencies]
tempfile = "3.3"
